Fix overlay's `z-index` value
The overlay `z-index` value should be the same with the dialog (as the dialog element has a special layouting layer and will always be positioned above the overlay). The 50 values was copied over from Modal, but 49 is the value we settled on for Flyout.

--- a/packages/components/app/styles/components/flyout.scss
+++ b/packages/components/app/styles/components/flyout.scss
@@ -45,7 +45,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 50;
+  z-index: 49;
   background: var(--token-color-palette-neutral-700);
   opacity: 0.5;
 }
